--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
     <string name="incorrect_toast">Wrong!</string>
     <string name="correct_toast">You got it!</string>
 
-    <string name="question_1">Valentine\'s day is banned in Saudi Arabia.</string>
-    <string name="question_2">A slug\'s blood is green.</string>
-    <string name="question_3">Approximately one quarter of human bones are in the feet.</string>
+    <string name="question_1">Pakistan and India are neighbouring countries.</string>
+    <string name="question_2">The 2004 Olympic Games were hosted by Greece.</string>
+    <string name="question_3">The Titanic sank in the year 1932.</string>
     <string name="question_4">The total surface area of two human lungs is approximately 70 square metres.</string>
     <string name="question_5">In West Virginia, USA, if you accidentally hit an animal with your car, you are free to take it home to eat.</string>
     <string name="question_6">In London, UK, if you happen to die in the House of Parliament, you are technically entitled to a state funeral, because the building is considered too sacred a place.</string>
